tests/vectors/valid/int_minus1.hex
6E 72 66 31  03  FF FF FF FF  FF FF FF FF
