tests/vectors/invalid/trailing_data.hex
6E 72 66 31  00  FF
